testsuite/tests/rename/should_fail/DisabledTLKS.hs
-- No -XTopLevelKindSignatures!

module DisabledTLKS where

import Data.Kind (Type)

type T :: Type
data T
